[package]
name = "amethyst_physics"
version = "0.2.0"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/amethyst_physics"
description = "The Amethyst Physics engine interface."
keywords = ["physics", "dynamics", "game", "amethyst"]
categories = ["science", "game-engines", "simulation", "games"]
readme = "README.md"
license = "MIT"

[dependencies]
amethyst_core = { git = "https://github.com/amethyst/amethyst.git", branch = "improvement/2228/chip-away-at-crashes" }
amethyst_error = { git = "https://github.com/amethyst/amethyst.git", branch = "improvement/2228/chip-away-at-crashes" }
log = "0.4.6"
